--- a/bacula-dir.conf
+++ b/bacula-dir.conf
@@ -43,23 +43,23 @@ Run = Level=Full on mon-sun at 13:00
 }
 
 Job {
-Name = "Backup" #Имя задания
-Type = Backup #Тип работы(создание бекапа)
-Level = Full #Уровень бекапа
-Client=fd #Клиент на котором будет производиться бекап
-FileSet="fd" #Где описано как и какие файлы будем сохранять
-Storage = sd #Куда будем «сливать» бекап
-Pool = mainpool #Определяем с каким «пулом»(как) будем работать
-Messages = Standard #Как отрапортовать о проделанной работе
-Schedule = "DailyFull" #По какому расписанию делать бекапы
+Name = "WP_backup" 
+Type = Backup 
+Level = Full 
+Client=fd 
+FileSet="WP"
+Storage = sd 
+Pool = mainpool 
+Messages = Daemon 
+Schedule = "DailyFull" 
 } 
 
 FileSet {
-Name = "fd"
+Name = "WP"
 Include { 
 Options { 
-signature = MD5 #Для сверки используем MD5
-Compression=GZIP #Используем GZIP компрессию 
+signature = MD5 
+Compression=GZIP  
 } 
 File = /var/www/wordpress/
 } 
@@ -71,29 +71,118 @@ Address = 172.16.10.3
 FDPort = 9102
 Catalog = MyCatalog
 Password = "123"
-File Retention = 28 days #Сколько сохранять метаданные о сохраненных файлах для 
-#данного клиента
-Job Retention = 28 days #Сколько сохранять метаданные касательно заданий для данного #клиента
-AutoPrune = yes #Может ли бакула очищать метаданные 
+File Retention = 28 days 
+Job Retention = 28 days 
+AutoPrune = yes 
 }
 
 Pool {
 Name = mainpool
 Pool Type = Backup
-Recycle = yes # Может ли бакула удалять задания из томов
-AutoPrune = yes # Может ли бакула очищать тома
-Volume Retention = 21 days # Как долго бакула должна "бояться" очистить том
-Maximum Volume Jobs = 7 # Сколько заданий хранить в каждом из томов
-Maximum Volumes = 4 # максимальное количество том которыми может #оперировать бакула
+Recycle = yes 
+AutoPrune = yes
+Volume Retention = 21 days 
+Maximum Volume Jobs = 7 
+Maximum Volumes = 4
+Label Format = "wp-"
 }
 
 Job {
-Name = "fd-resotre"
+Name = "WP_resotre"
 Type = Restore 
 Client=fd
 FileSet="fd" 
 Storage = sd 
 Pool = mainpool 
-Messages = Standard 
+Messages = Daemon 
+Where = /var/lib/bacula-restores
+} 
+####################################
+Job {
+Name = "etc weekly full" 
+Type = Backup 
+Level = Full 
+Client=fd 
+FileSet="etc"
+Storage = sd 
+Pool = etcpool 
+Messages = Daemon 
+Schedule = "etcweeklyfull" 
+} 
+
+FileSet {
+Name = "etc"
+Include { 
+Options { 
+signature = MD5 
+Compression=GZIP  
+} 
+File = /etc
+} 
+}
+
+Pool {
+Name = etcpool
+Pool Type = Backup
+Recycle = yes 
+AutoPrune = yes
+Volume Retention = 21 days 
+Maximum Volume Jobs = 7 
+Maximum Volumes = 4
+Label Format = "etc-full-"
+}
+
+Schedule {
+Name = "etcweeklyfull"
+Run = Level=Full on mon at 12:00
+}
+
+Job {
+Name = "etc full restore"
+Type = Restore 
+Client=fd
+FileSet="etc" 
+Storage = sd 
+Pool = etcpool 
+Messages = Daemon 
+Where = /var/lib/bacula-restores
+} 
+####################################
+Job {
+Name = "etc inc full" 
+Type = Backup 
+Level = Incremental 
+Client=fd 
+FileSet="etc"
+Storage = sd 
+Pool = etcincpool 
+Messages = Daemon 
+Schedule = "etcdailyinc" 
+} 
+
+Pool {
+Name = etcincpool
+Pool Type = Backup
+Recycle = yes 
+AutoPrune = yes
+Volume Retention = 21 days 
+Maximum Volume Jobs = 7 
+Maximum Volumes = 4
+Label Format = "etc-inc-"
+}
+
+Schedule {
+Name = "etcdailyinc"
+Run = Level=Incremental on mon-sun at 12:10
+}
+
+Job {
+Name = "etc inc restore"
+Type = Restore 
+Client=fd
+FileSet="etc" 
+Storage = sd 
+Pool = etcincpool 
+Messages = Daemon 
 Where = /var/lib/bacula-restores
 } 
