--- a/bacula-dir.conf
+++ b/bacula-dir.conf
@@ -91,7 +91,7 @@ Job {
 Name = "WP_resotre"
 Type = Restore 
 Client=fd
-FileSet="fd" 
+FileSet="WP" 
 Storage = sd 
 Pool = mainpool 
 Messages = Daemon 
